--- a/Android/VisualCrypt/VisualCrypt/Resources/layout/Files.axml
+++ b/Android/VisualCrypt/VisualCrypt/Resources/layout/Files.axml
@@ -14,6 +14,7 @@
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+  
     >
 
   </android.support.v7.widget.Toolbar>
@@ -23,7 +24,10 @@
       android:layout_height="fill_parent"
       android:id="@+id/files_content"
       android:layout_below="@id/files_toolbar">
-   
+    <ListView
+        android:id="@+id/listView_files"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
   </LinearLayout>
 </RelativeLayout>
 
